# nonebot-plugin-chobits

./: .env.prod  .gitignore  README.md  generate_pyproject.py  pyproject.toml
docs/: CQ_CODE.md  NAPCAT_DOCKER.md  README.md
napcat/: napcat_docker.sh  onebot11.json  webui.json
src/nonebot-plugin-chobits/: __init__.py
src/nonebot-plugin-chobits/core/: __init__.py
src/nonebot-plugin-chobits/core/fetch_custom_face/: __init__.py
src/nonebot-plugin-chobits/core/ha/: __init__.py
src/nonebot-plugin-chobits/core/life_cycle/: __init__.py
src/nonebot-plugin-chobits/core/music/: __init__.py
src/nonebot-plugin-chobits/core/random_image/: __init__.py
src/nonebot-plugin-chobits/core/set_group_portrait/: __init__.py
src/nonebot-plugin-chobits/core/set_qq_avatar/: __init__.py
src/nonebot-plugin-chobits/core/set_qq_profile/: __init__.py
src/nonebot-plugin-chobits/core/settings/: __init__.py
src/nonebot-plugin-chobits/core/test/: __init__.py
src/nonebot-plugin-chobits/core/tool/: __init__.py  command.py  common.py  http.py  server.py  ws.py
src/nonebot-plugin-chobits/core/tool/templates/: functions.html  home.html  login.html  monitor.html  roles.html  settings.html  users.html
src/nonebot-plugin-chobits/core/wish/: __init__.py
src/nonebot-plugin-chobits/database/: database.sql
src/nonebot-plugin-chobits/unit/: __init__.py
src/nonebot-plugin-chobits/unit/image/: __init__.py
src/nonebot-plugin-chobits/unit/mysql/: __init__.py
src/nonebot-plugin-chobits/unit/redis/: __init__.py
src/nonebot-plugin-chobits/unit/sqlite/: __init__.py
(+8 files in other folders)
