[project]
name = "nonebot-plugin-chobits"
version = "0.0.1"
description = "nonebot-plugin-chobits"
readme = "README.md"
requires-python = ">=3.9, <4.0"
authors = [
    { name = "SnowRabbit", email = "snowrabbit@snowrabbit.top" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "nonebot2>=2.0.0",
    "nonebot-adapter-onebot>=2.0.0",
]

[project.license]
text = "MIT"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]
plugins = []
plugin_dirs = ["src"]
builtin_plugins = []

[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"
